--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,12 @@
 	</properties>
 
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/net.orfjackal.retrolambda/retrolambda -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
+			<groupId>net.orfjackal.retrolambda</groupId>
+			<artifactId>retrolambda</artifactId>
+			<version>2.5.1</version>
 		</dependency>
-
 		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant -->
 		<dependency>
 			<groupId>org.apache.ant</groupId>
